<resources>
    <string name="app_name">tg_test</string>
    <string name="forChange">Change</string>
    <string name="forCopy">Copy</string>
    <string name="forClear">Clear</string>
    <string name="firstText">Your text.</string>
    <string name="newValue">New text.</string>
    <string name="channel_name">test-channel</string>
    <string name="channel_description">this is my test channel</string>
</resources>